# blogbackendserver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: app-deploy.yml  db-deploy.yml
alembic/: env.py
alembic/versions/: 1d19f38237f4_auto.py  535f237ef25a_change_updated_at_nullable_on_insert.py
app/: main.py
app/core/: celery.py  logger.py  security.py
app/core/config/: base.py  settings.py
app/core/database/: connection.py  dependencies.py  mysql.py  redis.py
app/core/i18n/: i18n.py
app/crud/: analytic_crud.py  auth_crud.py  blog_crud.py  board_crud.py  friend_crud.py  media_crud.py  payment_crud.py  project_crud.py  section_crud.py  seo_crud.py  subscriber_crud.py  tag_crud.py  user_crud.py
app/decorators/: email_validator.py  rate_limiter.py
app/models/: __init__.py  auth_model.py  blog_model.py  board_model.py  friend_model.py  media_model.py  payment_model.py  project_model.py  section_model.py  seo_model.py  subscriber_model.py  tag_model.py  user_model.py
app/router/v1/: analytic_router.py  auth_router.py  blog_router.py  board_router.py  docs_router.py  friend_router.py  media_router.py  payment_router.py  project_router.py  section_router.py  seo_router.py  subscriber_router.py  tag_router.py  (+1 more)
app/schemas/: auth_schemas.py  blog_schemas.py  board_schemas.py  common.py  friend_schemas.py  media_schemas.py  payment_schemas.py  project_schemas.py  section_schemas.py  seo_schemas.py  tag_schemas.py  user_schemas.py
app/services/: analytic_service.py  auth_service.py  blog_service.py  board_service.py  friend_service.py  media_service.py  payment_service.py  project_service.py  section_service.py  seo_service.py  subscriber_service.py  tag_service.py  user_service.py
app/tasks/: __init__.py  backup_database_task.py  cleanup_expired_tokens_task.py  cleanup_unverified_users_task.py  client_info_task.py  delete_user_media_task.py  generate_content_audio_task.py  greeting_email_task.py  large_content_translation_task.py  notification_task.py  send_invoice_email_task.py  summary_content_task.py  thumbnail_task.py  watermark_task.py
app/utils/: agent.py  client_info.py  email.py  encrypt_data.py  io_utils.py  keyset_pagination.py  offset_pagination.py  pagination_headers.py  payment_message_generator.py  pdf_generator.py  qr_generator.py  s3_bucket.py
docs/: migration-flowchart.md
script/: initial_data.py  setup-docker.sh  setup-mysql-redis.sh  setup-server.sh
tests/: conftest.py  test_api_routes.py  test_blog_tts.py  test_crud.py  test_database.py  test_decorators.py  test_edge_cases.py  test_errors.py  test_i18n.py  test_integration.py  test_models.py  test_schemas.py  test_security.py  test_services.py  test_tasks.py  test_utils.py
(+31 files in other folders)
